test/testdata/functions/builtin/invalid_property_access_error.lox
// error: property access is not valid for 'function' value
// lint warning: property 'y' has not been declared or assigned anywhere
clock.y;
